# labs_11_12

./: .gitignore  CMakeLists.txt  README.md
lab11/: task1_prices.cpp  task2_inventory.cpp  task3_journal_editor.cpp  task4_data_sync.cpp  task5_reverse_output.cpp
lab12/: task1_reverse_history_iterator.cpp  task2_time_interval_iterator.cpp  task3_filter_iterator.cpp  task4_transform_iterator.cpp  task5_multi_iterator.cpp
